remove env api (#4)
